EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==04/24/2010==
gaeorn: possible fix for long standing reconnect to login server problem if login server connection is down for an extended period of time.

==04/23/2010==
cavedude: Added Drakking to faction_list, updated wolf form and Skeleton.

REQUIRED SQL:
ALTER TABLE `faction_list` ADD COLUMN `mod_r42` smallint(6) NOT NULL default '0' AFTER `mod_r14`;
ALTER TABLE `faction_list` ADD COLUMN `mod_r367` smallint(6) NOT NULL default '0' AFTER `mod_r330`;
ALTER TABLE `faction_list` ADD COLUMN `mod_r522` smallint(6) NOT NULL default '0' AFTER `mod_r367`;
UPDATE faction_list SET mod_r367 = mod_r60;
UPDATE faction_list SET mod_r42 = mod_r120;
ALTER TABLE `faction_list` DROP COLUMN `mod_r60`;
ALTER TABLE `faction_list` DROP COLUMN `mod_r120`;

==04/22/2010==
Trevius: Added the following to Client Perl; GetEndurance(), GetMaxEndurance(), GetEnduranceRatio(), SetEndurance(amount).
Trevius: SoD - Size fix for player races.
Trevius: SoD - Manual consumption of food/drink works and deletes the consumed item.
Trevius: SoD - Consumption of alcohol now gives a chance for skilling up tolerance and also deletes the consumed item.

==04/21/2010==
Trevius: SoD - The Mana and Endurance formulas are as close as I can get them for now.
Trevius: SoD - NPC default size is now 6 if the database is set to 0.
Trevius: It is no longer possible for current Endurance to be higher than max Endurance.
Trevius: Corrected a mistake pointed out by Rogean that was sending an unnecessary packet when clients were moving.

==04/19/2010==
gaeorn: bug fix so login server does not send world local_ip if option local_network is not set in login.ini

==04/18/2010==
Trevius: SoD - Added HP formulas for the SoD client, and a new rule to enable them for SoD clients only.

Optional SQL: utils/sql/svn/1394_optional_rule_sod_hp_mana_end.sql

==04/17/2010==
gaeorn: fixed login server auto-reconnect