@@ -1,0 +1,40 @@
+INSERT INTO altadv_vars (skill_id, name, cost, max_level, hotkey_sid, hotkey_sid2, title_sid, desc_sid, type, spellid, prereq_skill, prereq_minpoints, spell_type, 
+spell_refresh, classes, berserker, class_type, cost_inc, aa_expansion, special_category, sof_type, sof_cost_inc, sof_max_level, sof_next_skill, clientver) VALUES
+('7800', 'Harm Touch', '0', '17', '7800', '7800', '7800', '7800', '3', '13531', '0', '0', '39', '4320', '32', '0', '1', '1', '0', '9', '3', '0', '17', '7800', '4'),
+('7850', 'Lay on Hands', '0', '17', '7850', '7850', '7850', '7850', '3', '13546', '0', '0', '39', '4320', '8', '0', '1', '1', '0', '9', '3', '0', '17', '7850', '4');
+
+INSERT INTO aa_actions (aaid, rank, reuse_time, spell_id, target, nonspell_action, nonspell_mana, nonspell_duration, redux_aa, redux_rate, redux_aa2, redux_rate2) VALUES
+('7800', '0', '4320', '13531', '2', '0', '0', '0', '0', '0', '0', '0'),
+('7800', '1', '4320', '13532', '2', '0', '0', '0', '0', '0', '0', '0'),
+('7800', '2', '4320', '13533', '2', '0', '0', '0', '0', '0', '0', '0'),
+('7800', '3', '4320', '13534', '2', '0', '0', '0', '0', '0', '0', '0'),
+('7800', '4', '4320', '13535', '2', '0', '0', '0', '0', '0', '0', '0'),
+('7800', '5', '4320', '13536', '2', '0', '0', '0', '0', '0', '0', '0'),
+('7800', '6', '4320', '13537', '2', '0', '0', '0', '0', '0', '0', '0'),
+('7800', '7', '4320', '13538', '2', '0', '0', '0', '0', '0', '0', '0'),
+('7800', '8', '4320', '13539', '2', '0', '0', '0', '0', '0', '0', '0'),
+('7800', '9', '4320', '13540', '2', '0', '0', '0', '0', '0', '0', '0'),
+('7800', '10', '4320', '13541', '2', '0', '0', '0', '0', '0', '0', '0'),
+('7800', '11', '4320', '13542', '2', '0', '0', '0', '0', '0', '0', '0'),
+('7800', '12', '4320', '13543', '2', '0', '0', '0', '0', '0', '0', '0'),
+('7800', '13', '4320', '13544', '2', '0', '0', '0', '0', '0', '0', '0'),
+('7800', '14', '4320', '13545', '2', '0', '0', '0', '0', '0', '0', '0'),
+('7800', '15', '4320', '13562', '2', '0', '0', '0', '0', '0', '0', '0'),
+('7800', '16', '4320', '13563', '2', '0', '0', '0', '0', '0', '0', '0'),
+('7850', '0', '4320', '13546', '2', '0', '0', '0', '0', '0', '0', '0'),
+('7850', '1', '4320', '13547', '2', '0', '0', '0', '0', '0', '0', '0'),
+('7850', '2', '4320', '13548', '2', '0', '0', '0', '0', '0', '0', '0'),
+('7850', '3', '4320', '13549', '2', '0', '0', '0', '0', '0', '0', '0'),
+('7850', '4', '4320', '13550', '2', '0', '0', '0', '0', '0', '0', '0'),
+('7850', '5', '4320', '13551', '2', '0', '0', '0', '0', '0', '0', '0'),
+('7850', '6', '4320', '13552', '2', '0', '0', '0', '0', '0', '0', '0'),
+('7850', '7', '4320', '13553', '2', '0', '0', '0', '0', '0', '0', '0'),
+('7850', '8', '4320', '13554', '2', '0', '0', '0', '0', '0', '0', '0'),
+('7850', '9', '4320', '13555', '2', '0', '0', '0', '0', '0', '0', '0'),
+('7850', '10', '4320', '13556', '2', '0', '0', '0', '0', '0', '0', '0'),
+('7850', '11', '4320', '13557', '2', '0', '0', '0', '0', '0', '0', '0'),
+('7850', '12', '4320', '13558', '2', '0', '0', '0', '0', '0', '0', '0'),
+('7850', '13', '4320', '13559', '2', '0', '0', '0', '0', '0', '0', '0'),
+('7850', '14', '4320', '13560', '2', '0', '0', '0', '0', '0', '0', '0'),
+('7850', '15', '4320', '13561', '2', '0', '0', '0', '0', '0', '0', '0'),
+('7850', '16', '4320', '16028', '2', '0', '0', '0', '0', '0', '0', '0');
